--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the source code accompanying the Module Core of App From Scratch.",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "markdown-it": "^8.3.1"
   },
   "devDependencies": {},
   "scripts": {
