--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "express": "^4.15.3",
     "markdown-it": "^8.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.0.35",
+    "@types/markdown-it": "0.0.2",
+    "@types/node": "^7.0.28",
+    "typescript": "^2.3.4"
+  },
   "scripts": {
     "start": "node ./index.js",
     "something": "echo \"running me\"",
