--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "This is the source code accompanying the Module Core of App From Scratch.",
   "main": "index.js",
   "dependencies": {
+    "bootstrap-styl": "^5.0.8",
     "express": "^4.15.3",
-    "markdown-it": "^8.3.1"
+    "markdown-it": "^8.3.1",
+    "nib": "^1.1.2",
+    "pug": "^2.0.0-rc.2",
+    "stylus": "^0.54.5"
   },
   "devDependencies": {
     "@types/express": "^4.0.35",
