--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "This is the source code accompanying the Module Core of App From Scratch.",
   "main": "index.js",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "bootstrap-styl": "^5.0.8",
     "express": "^4.15.3",
+    "fs-extra-promise": "^1.0.1",
     "markdown-it": "^8.3.1",
     "nib": "^1.1.2",
     "pug": "^2.0.0-rc.2",
     "stylus": "^0.54.5"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.6",
     "@types/express": "^4.0.35",
+    "@types/fs-extra-promise": "^1.0.2",
     "@types/markdown-it": "0.0.2",
     "@types/node": "^7.0.28",
     "typescript": "^2.3.4"
