--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "bootstrap-styl": "^5.0.8",
+    "chokidar": "^1.7.0",
     "express": "^4.15.3",
     "fs-extra-promise": "^1.0.1",
     "markdown-it": "^8.3.1",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.6",
+    "@types/chokidar": "^1.7.0",
     "@types/express": "^4.0.35",
     "@types/fs-extra-promise": "^1.0.2",
     "@types/markdown-it": "0.0.2",
